deploy/kubernetes/prod.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: bagshop-catalog
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: db

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: bagshop-catalog
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: db
        image: mysql:5.6
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        #TODO: Add resources block
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi

---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: bagshop-catalog
spec:
  ports:
  - name: http
    port: 8083
  selector:
    app: api

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: bagshop-catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: aheadaviation/bagshop-catalog
        readinessProbe:
          httpGet:
            path: /api/v1/catalog/health
            port: 8083
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/v1/catalog/health
            port: 8083
        resources:
          limits:
            memory: "20Mi"
            cpu: 0.2
          requests:
            memory: "10Mi"
            cpu: 0.1
