deploy/kubernetes/ingress-aws-alb.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: bagshop-catalog
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: bagshop-catalog
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/catalog
        backend:
          serviceName: api
          servicePort: 8083
